tests/renderer/snapshots/tests__renderer__graphical__with_help_suggestion_different_lines.snap
---
source: tests/renderer/graphical.rs
expression: render(message)
---
× error: unnecessary parenthesis
   help: remove unnecessary parenthesis here
 1 │ fn foo() -> CoolBoolean {
   │             ^^^^^^^^^^^
   ∶ 
 2 │     return false;
   │            ^^^^^
